--- a/index.html
+++ b/index.html
@@ -39,5 +39,58 @@
             </div>
         </div>
     </div>
+
+    <div class="service_container">
+        <div class="service_left_container">
+            <div class="service_details">
+                <button class="service_list">Service List</button>
+                <h1 class="service_title"><span class="primary_color">Services</span> We Can Help You With !</h1>
+                <p class="service_description">Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet porro viverra libero habitasse porro fames quos pharetra diam cupidatat ligula! Netus! Quos dignissi mos laoreet.</p>
+
+                <ol>
+                    <li>Nobis ridiculus cupiditate egestas commodi.</li>
+                    <li>Ipsum dui curabitur dapibuish mollitia.</li>
+                </ol>
+
+                <div class="author_details">
+                    <div class="author_description">
+                        <img class="author_img" src="asset/image/author.jpg" alt="">
+                        <h5>George Smith <br><small>CEO, Director</small></h5>
+                    </div>
+                    <div class="more_details">
+                        <button>more details</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="service_right_container">
+            <div class="services">
+                <div class="service_up">
+                  <div class="service">
+                    <img class="service_logo" src="asset/icons/coding.png" alt="">
+                    <h3>Website Development</h3>
+                  </div>
+
+                  <div class="service">
+                    <img class="service_logo" src="asset/icons/bar-chart.png" alt="">
+                    <h3>Graphic & Sketch Designing</h3>
+                  </div>
+
+                </div>
+                <div class="service_down">
+                    <div class="service">
+                        <img class="service_logo" src="asset/icons/startup.png" alt="">
+                        <h3>SEO & Content Writing</h3>
+                    </div>
+
+                    <div class="service">
+                        <img class="service_logo" src="asset/icons/digital-marketing.png" alt="">
+                        <h3>Digital Market Planning</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
